# Icarus

./: .gitignore  CMakeLists.txt  NET_DELAY_TEST_1s  README.md  sdkconfig  sdkconfig.old
logs/: README.md  log_20221216_1800.csv
logs/ex_test/net/: NET_DELAY_TEST_1s.txt  NET_DELAY_TEST_3s.txt  NET_DELAY_TEST_6s.txt  NET_DELAY_TEST_9s.txt  delay_1s.csv  delay_3s.csv  delay_6s.csv  delay_9s.csv  net_delay_1s.txt  net_delay_3s.txt  net_delay_6s.txt  net_delay_9s.txt
logs/ex_test/servo/: cmd_1.txt  cmd_1_py.txt  cmd_2.txt  cmd_2_py.txt  cmd_3.txt  cmd_3_py.txt  log_esp_1.txt  log_esp_2.txt  log_esp_3.txt  servos_delay_1.csv  servos_delay_2.csv  servos_delay_3.csv
logs/mpu6050/gravity/: lowpass_gravity.csv
logs/mpu6050/gyroscope/: log_20221215_1744.csv  log_20221216_2352.csv  log_20221217_0013.csv  log_20221217_0038.csv  log_20221219_0218.csv  log_20221219_0253.csv  log_20221219_1615.csv
logs/timestamp/: delays.csv
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
main/OLD/include/Icarus/: Actuator.hpp  Communicator.hpp  HardwareMonitor.hpp  Icarus.hpp  Network.hpp  Telemetry.hpp  Vector3D.hpp
main/OLD/src/: Actuator.cpp  Communicator.cpp  HardwareMonitor.cpp  Icarus.cpp  Network.cpp  Vector3D.cpp  main.cpp
main/include/: _network.h  actuator.h  communicator.h  dsp.h  iot_servo.h  mpu6050.h  network.h  queue.h  sensors.h  shared.h  smoother.h  utils.h  workers.h
main/src/: _network.c  actuator.c  communicator.c  dsp.c  iot_servo.c  main.c  mpu6050.c  network.c  queue.c  sensors.c  shared.c  smoother.c  utils.c  workers.c
(+6 files in other folders)
